--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,30 @@
+@font-face {
+    font-family: "Pixeline";
+    src: url(Pixeliner8.ttf) format(truetype);
+}
 body {
     background-color: rgb(157, 241, 230);
+    
 }
-p {
+.P {
     color: rgb(1, 30, 63);
+    font-family: "Helvetica Neue";
+    font-size: 14px;
+    text-align: center;
+}
+.H1 {
+    color: rgb(1, 30, 63);
+    font-family: "Helvetica Neue";
+    font: 30px;
+    text-align: center;
+}
+.buttonGray {
+    width: 100px;
+    height: 50px;
+    color: #303030;
+    border-radius: 10px;
+    background-color: rgb(194, 192, 192);
+    animation-delay: 0.5s;
+    
+
 }
